Refs #26831 - Made image closable by clicking on it, fixed overlap of the image plane with the audio button and adjusted the background color of the question

--- a/src/main/resources/css/background-division.css
+++ b/src/main/resources/css/background-division.css
@@ -26,8 +26,6 @@
 .question-box {
     -fx-width: 20%;
     -fx-float: left;
-    -fx-background-color: rgba(247, 250, 17, 0.02);
-
 }
 
 .answer-box {
